styles.css
img {
  max-width: 100%;
  display: block;
  height: auto;
  margin: 0 auto;
}


h1 {
  text-align:center;
}


h2 {
  text-align:center;
  font-size: 1rem;
  font: times-new-roman;
    font-weight: normal;
    margin-bottom: 20px;
}

.fancy-line-pic {

  display: block;
  margin: 0 auto;
   width: 20%; 
  height: auto; 

}

h3 {
  margin-top:20px;
  text-align:center;
  margin-bottom: 20px;

}

blockquote {

margin-bottom: 50px;
text-align:center;

}

p {

  margin-left: 20px;
}


figcaption {

  margin-bottom: 50px;
}

h4 {
  
  text-align:center;
  font-weight: normal;


}

h5 {

  text-align:center;
  margin-bottom: 20px;
  font-weight: normal;
  font-size:1em;

}

.fancy-line-pic2 {

  display: block;
  margin: 0 auto;
   width: 20%; 
  height: auto;


}

p {
  text-align: center;
}

   

